--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "server": "node backend/server.js"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "emoji-mart": "^5.6.0",
     "express": "^5.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
