--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,4 +1,7 @@
 [build]
   base = "frontend"
   command = "npm install --legacy-peer-deps && npm run build"
-  publish = "frontend/dist"
+  publish = "dist"
+
+[build.environment]
+  NPM_FLAGS = "--legacy-peer-deps"
